--- a/index.html
+++ b/index.html
@@ -15,8 +15,14 @@
     <p>holiii</p>
     <br><br>
 
+    <script>alert("Heeeey, muy buenas a todos, guaaapisimosssssss")</script> 
 
-    
+    <script> 
+         var x =  "Holiwis";
+         console . log (x) ;
+    </script>
+  
+    <script src="./codigo.js"> </script>
     <p id="primerParrafo">Este va a ser mi parrafo para que todos lo vean</p>
     
     <p id="segundoParrafo">este es otro parrafo para quetodos lo vean</p>
